--- a/rocketman/templates/services/service_index_page.html
+++ b/rocketman/templates/services/service_index_page.html
@@ -282,16 +282,16 @@
       <div class="nav-menu" id="myNavMenu">
         <ul class="nav_menu_list">
           <li class="nav_list">
-            <a href="http://127.0.0.1:8000" class="nav-link ">Home</a>
+            <a href="https://64.227.150.192/" class="nav-link ">Home</a>
           </li>
           <li class="nav_list">
-            <a href="http://127.0.0.1:8000/services/" class="nav-link ">Books & Journals</a>
+            <a href="https://64.227.150.192/services/" class="nav-link ">Books & Journals</a>
           </li>
           <li class="nav_list">
-            <a href="http://127.0.0.1:8000/servicetime" class="nav-link active-link">Events & Conferences</a>
+            <a href="https://64.227.150.192/servicetime/" class="nav-link active-link">Events & Conferences</a>
           </li>
           <li class="nav_list">
-            <a href="http://127.0.0.1:8000/great-time/" class="nav-link ">Projects & Achievements</a>
+            <a href="https://64.227.150.192/great-time/" class="nav-link ">Projects & Achievements</a>
           </li>
         </ul>
       </div>
