--- a/rocketman/templates/services/service_index_page.html
+++ b/rocketman/templates/services/service_index_page.html
@@ -346,10 +346,10 @@
             <div class="footer-section quick-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="http://127.0.0.1:8000/">Home</a></li>
-                    <li><a href="http://127.0.0.1:8000/services/">Books & Journals</a></li>
-                    <li><a href="http://127.0.0.1:8000/servicetime">Events & Conferences</a></li>
-                    <li><a href="http://127.0.0.1:8000/great-time/">Projects & Achievements</a></li>
+                    <li><a href="https://64.227.150.192/">Home</a></li>
+                    <li><a href="https://64.227.150.192/services/">Books & Journals</a></li>
+                    <li><a href="https://64.227.150.192/servicetime/">Events & Conferences</a></li>
+                    <li><a href="https://64.227.150.192/great-time/">Projects & Achievements</a></li>
                 </ul>
             </div>
             <div class="footer-section contact">
