--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -890,10 +890,10 @@ nav.abc{
               <div class="footer-section quick-links">
                   <h3>Quick Links</h3>
                   <ul>
-                      <li><a href="https://64.227.150.192/">Home</a></li>
-                    <li><a href="https://64.227.150.192/services/">Books & Journals</a></li>
-                    <li><a href="https://64.227.150.192/servicetime/">Events & Conferences</a></li>
-                    <li><a href="https://64.227.150.192/great-time/">Projects & Achievements</a></li>
+                      <li><a href="https://suganyaramamoorthy.com/">Home</a></li>
+                    <li><a href="https://suganyaramamoorthy.com/services/">Books & Journals</a></li>
+                    <li><a href="https://suganyaramamoorthy.com/servicetime/">Events & Conferences</a></li>
+                    <li><a href="https://suganyaramamoorthy.com/great-time/">Projects & Achievements</a></li>
                   </ul>
               </div>
               <div class="footer-section contact">
