--- a/rocketman/templates/services/service_index_page.html
+++ b/rocketman/templates/services/service_index_page.html
@@ -282,16 +282,16 @@
       <div class="nav-menu" id="myNavMenu">
         <ul class="nav_menu_list">
           <li class="nav_list">
-            <a href="https://64.227.150.192/" class="nav-link ">Home</a>
+            <a href="https://suganyaramamoorthy.com/" class="nav-link ">Home</a>
           </li>
           <li class="nav_list">
-            <a href="https://64.227.150.192/services/" class="nav-link ">Books & Journals</a>
+            <a href="https://suganyaramamoorthy.com/services/" class="nav-link ">Books & Journals</a>
           </li>
           <li class="nav_list">
-            <a href="https://64.227.150.192/servicetime/" class="nav-link active-link">Events & Conferences</a>
+            <a href="https://suganyaramamoorthy.com/servicetime/" class="nav-link active-link">Events & Conferences</a>
           </li>
           <li class="nav_list">
-            <a href="https://64.227.150.192/great-time/" class="nav-link ">Projects & Achievements</a>
+            <a href="https://suganyaramamoorthy.com/great-time/" class="nav-link ">Projects & Achievements</a>
           </li>
         </ul>
       </div>
@@ -346,10 +346,10 @@
             <div class="footer-section quick-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="https://64.227.150.192/">Home</a></li>
-                    <li><a href="https://64.227.150.192/services/">Books & Journals</a></li>
-                    <li><a href="https://64.227.150.192/servicetime/">Events & Conferences</a></li>
-                    <li><a href="https://64.227.150.192/great-time/">Projects & Achievements</a></li>
+                    <li><a href="https://suganyaramamoorthy.com/Home</a></li>
+                    <li><a href="https://suganyaramamoorthy.com/services/">Books & Journals</a></li>
+                    <li><a href="https://suganyaramamoorthy.com/servicetime/">Events & Conferences</a></li>
+                    <li><a href="https://suganyaramamoorthy.com/great-time/">Projects & Achievements</a></li>
                 </ul>
             </div>
             <div class="footer-section contact">
