--- a/rocketman/templates/services/service_index_page.html
+++ b/rocketman/templates/services/service_index_page.html
@@ -346,7 +346,7 @@
             <div class="footer-section quick-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="https://suganyaramamoorthy.com/Home</a></li>
+                    <li><a href="https://suganyaramamoorthy.com/</a>Home</li>
                     <li><a href="https://suganyaramamoorthy.com/services/">Books & Journals</a></li>
                     <li><a href="https://suganyaramamoorthy.com/servicetime/">Events & Conferences</a></li>
                     <li><a href="https://suganyaramamoorthy.com/great-time/">Projects & Achievements</a></li>
